# whatsapp-sender-pro

./: .gitignore  Book1.xlsx  Dockerfile  README.md  WhatsAppSender.py  WhatsApp_Sender_Pro_v4.3.0.py  create_project_structure.py  docker-compose.yml  install.bat  installed.txt  main.py  pyproject.toml  requirements.txt  restructure_project.py  run.py  setup.py
app/: __init__.py
app/core/: __init__.py  encryption_service.py  message_sender.py  update_checker.py  whatsapp_manager.py
app/services/: __init__.py  auth_service.py  firestore_service.py  license_service.py
app/ui/: __init__.py  styles.py  user_interface.py
data/translations/: ar.json  en.json  es.json  fr.json  gr.json  rs.json  tr.json
database/: models.py
src/: __init__.py  main.py
src/config/: __init__.py  app_config.yaml  encryption_keys.json  license_manager.py  settings.py
src/core/: __init__.py  contact_manager.py  hwid_generator.py  image_processor.py  license_validator.py  sender.py  whatsapp.py
src/developer/: __init__.py
src/ui/: __init__.py  admin_interface.py  components.py  dialogs.py  main_window.py
src/utils/: __init__.py  helpers.py  logger.py  translator.py  validators.py
utils/: __init__.py  logger.py
